# server-cpu-activity-tui

./: .gitignore  Makefile  README.md  config.sample.yaml  config.yaml  pyproject.toml  pytest.ini  requirements.txt
src/: __init__.py  main.py  monitor.py  ssh_client.py  ui.py  validation.py
src/ui/: __init__.py  app.py  app.tcss  messages.py  types.py
src/ui/screens/: __init__.py  add_server.py  add_server.tcss  confirm_delete.py  confirm_delete.tcss
src/ui/widgets/: __init__.py  cpu_core.py  history_plot.py  history_plot.tcss  memory.py  server.py  status_bar.py
tests/: __init__.py  repro_cancel_bug.py  test_add_server_navigation.py  test_concurrent_operations.py  test_corrupt_config.py  test_integration.py  test_main.py  test_monitor.py  test_network_failures.py  test_ssh_client.py  test_ui.py  test_validation.py
