[project]
name = "server-cpu-activity-tui"
version = "0.1.0"
description = "Terminal UI for monitoring CPU activity across multiple servers via SSH"
requires-python = ">=3.11"

[tool.ruff]
# Set the maximum line length
line-length = 120

# Target Python 3.11+
target-version = "py311"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "T201",    # print found (we use it for user-facing output)
    "DTZ005",  # datetime.now() without timezone (not critical for this app)
    "N818",    # Exception name should end in Error
    "B008",    # Function call in argument defaults (used by Textual bindings)
    "RUF012",  # Mutable class attributes (used by Textual reactive)
    "SIM108",  # Use ternary operator (sometimes less readable)
    "PTH123",  # Path.open() instead of open() (not always better)
    "ERA001",  # Commented-out code (we have legitimate commented code)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = [
    "PLR2004",  # Magic value used in comparison
    "S101",     # Use of assert
    "ARG",      # Unused function args
    "PLR0913",  # Too many arguments
]

# __init__ files can have unused imports
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Organize imports
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

[tool.pyright]
# Python version and environment
pythonVersion = "3.11"
pythonPlatform = "All"

# Include/exclude paths
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/venv",
    "**/node_modules",
    "build",
    "dist",
]

# Type checking mode
typeCheckingMode = "basic"

# Reporting rules
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"
reportUntypedFunctionDecorator = "none"
reportUntypedClassDecorator = "none"
reportUntypedBaseClass = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportPrivateUsage = "warning"
reportConstantRedefinition = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"
reportInconsistentConstructor = "warning"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "none"
reportCallInDefaultInitializer = "none"
reportImplicitStringConcatenation = "none"
reportMissingSuperCall = "none"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportAssertAlwaysTrue = "warning"
reportSelfClsParameterName = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportImplicitOverride = "none"

# Ignore specific files or patterns
ignore = []

# Use strict list inference
strictListInference = true

# Use strict dictionary inference
strictDictionaryInference = true

# Use strict set inference
strictSetInference = true

# Analyze unannotated functions
analyzeUnannotatedFunctions = true

# Enable stub package usage
stubPath = ""

# Virtual environment directory
venvPath = "."
venv = "venv"
